# ScaFFold

./: README.md  nikoli_fixes_overview.md  pyproject.toml  requirements.txt  slirp.out
.github/workflows/: style.yml
.venvs/scaffoldvenv-tuo/: pyvenv.cfg
ScaFFold/: benchmark.py  cli.py  generate_fractals.py  worker.py
ScaFFold/configs/: bench_scale7_shards1.yml  bench_scale7_shards2.yml  bench_scale8_shards2.yml  benchmark_default.yml  benchmark_testing.yml  scale7_long.yml
ScaFFold/datagen/: category_search.py  get_dataset.py  instance.py  volumegen.py
ScaFFold/fractals/var0.15/instances/np1024/000000/: 000000_0000.npy  000000_0001.npy  000000_0002.npy  000000_0003.npy  000000_0004.npy  000000_0005.npy  000000_0006.npy  000000_0007.npy  000000_0008.npy  000000_0009.npy  000000_0010.npy  000000_0011.npy  000000_0012.npy  000000_0013.npy  000000_0014.npy  000000_0015.npy  000000_0016.npy  000000_0017.npy  000000_0018.npy  000000_0019.npy  000000_0020.npy  000000_0021.npy  000000_0022.npy  000000_0023.npy  000000_0024.npy  000000_0025.npy  000000_0026.npy  000000_0027.npy  000000_0028.npy  000000_0029.npy  000000_0030.npy  000000_0031.npy  000000_0032.npy  000000_0033.npy  000000_0034.npy  000000_0035.npy  000000_0036.npy  000000_0037.npy  000000_0038.npy  000000_0039.npy  (+105 more)
ScaFFold/fractals/var0.15/instances/np1024/000001/: 000001_0000.npy  000001_0001.npy  000001_0002.npy  000001_0003.npy  000001_0004.npy  (+140 more)
ScaFFold/unet/: unet_model.py  unet_parts.py
ScaFFold/utils/: checkpointing.py  config_utils.py  create_restart_script.py  data_loading.py  data_types.py  dice_score.py  distributed.py  evaluate.py  perf_measure.py  spatial_sharding.py  trainer.py  utils.py
scripts/: install-matrix.sh  install-rccl.sh  install-tuolumne-torchpypi.sh  install-tuolumne.sh  scaffold-matrix.job  scaffold-tuolumne-torchpypi.job  scaffold-tuolumne.job  scaffold-tuolumne_rocm711.job  scale7_long.job  scale7_shards1.job  scale7_shards2.job  scale8_shards2.job
(+1885 files in other folders)
